DELETE Se implementó el método Delete para dispositivos Android. REFS #290
Signed-off-by: carlossegovia <carlitossegovia1979@gmail.com>

--- a/plugin.xml
+++ b/plugin.xml
@@ -78,6 +78,7 @@
         <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpPostJson.java" target-dir="src/com/synconset" />
         <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpPutJson.java" target-dir="src/com/synconset" />
         <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpUpload.java" target-dir="src/com/synconset" />
+        <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpDelete.java" target-dir="src/com/synconset" />
         <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpMultipartForm.java" target-dir="src/com/synconset" />
         <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpDownload.java" target-dir="src/com/synconset" />
         <source-file src="src/android/com/synconset/CordovaHTTP/CordovaHttpPlugin.java" target-dir="src/com/synconset" />
